--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "discord-player": "^7.1.0",
     "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "ytdl-core": "^4.11.5"
