--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ web_modules/
 .env.production.local
 .env.local
 
-# parcel-bundler cache (https://parceljs.org/)
+# parcel-bundler cacShe (https://parceljs.org/)
 .cache
 .parcel-cache
 
