--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "github:discordjs/voice",
     "discord-player": "^7.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
