--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "github:discordjs/voice",
+    "@discordjs/voice": "^0.18.0",
     "discord-player": "^7.1.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
+    "libsodium-wrappers": "^0.7.15",
     "ytdl-core": "^4.11.5"
   }
 }
